--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
 body {
-    padding-top: 70px
+    padding-top: 70px;
 }
 .color-white {
+     color:white;
+}
 
-    color:white
+.full-width {
+    width: 100%;
 }
 
